--- a/flink-sql/pom.xml
+++ b/flink-sql/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.cj.flinkSql</groupId>
     <artifactId>flink.sql</artifactId>
     <packaging>pom</packaging>
+    <name>flink.sql</name>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>launcher</module>
@@ -30,28 +31,28 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>2.2.6</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>revision</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <dateFormat>yyyy.MM.dd HH:mm:ss</dateFormat>
-                    <verbose>true</verbose>
-                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                    <gitDescribe>
-                        <always>false</always>
-                        <dirty>-dirty</dirty>
-                        <forceLongFormat>false</forceLongFormat>
-                    </gitDescribe>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>pl.project13.maven</groupId>-->
+<!--                <artifactId>git-commit-id-plugin</artifactId>-->
+<!--                <version>2.2.6</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>revision</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <dateFormat>yyyy.MM.dd HH:mm:ss</dateFormat>-->
+<!--                    <verbose>true</verbose>-->
+<!--                    <generateGitPropertiesFile>true</generateGitPropertiesFile>-->
+<!--                    <gitDescribe>-->
+<!--                        <always>false</always>-->
+<!--                        <dirty>-dirty</dirty>-->
+<!--                        <forceLongFormat>false</forceLongFormat>-->
+<!--                    </gitDescribe>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
