--- a/flink-sql/kafka/pom.xml
+++ b/flink-sql/kafka/pom.xml
@@ -11,6 +11,9 @@
 
     <artifactId>sql.kafka</artifactId>
     <packaging>pom</packaging>
+    <modules>
+        <module>kafka-source</module>
+    </modules>
 
     <dependencies>
         <dependency>
