--- a/flink-sql/kafka/pom.xml
+++ b/flink-sql/kafka/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>kafka-source</module>
+        <module>kafka-sink</module>
     </modules>
 
     <dependencies>
