--- a/flink-sql/pom.xml
+++ b/flink-sql/pom.xml
@@ -14,6 +14,7 @@
         <module>core</module>
         <module>kafka-base</module>
         <module>kafka</module>
+        <module>kafka09</module>
     </modules>
 
 
